added picture column to destinations table, added picture to destinations#show layout

--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -15,5 +15,7 @@
   <%= @destination.country %>
 </p>
 
+<div><img src='<%= @destination.picture %>'></div>
+
 <%= link_to 'Edit', edit_destination_path(@destination) %> |
 <%= link_to 'Back', destinations_path %>
