Added pill-style links with color codes, on destinations table. Let me know what you think.

--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -19,9 +19,9 @@
           <td><%= destination.title %></td>
           <td><%= destination.description %></td>
           <td><%= destination.country %></td>
-          <td><%= link_to 'Show', destination %></td>
-          <td><%= link_to 'Edit', edit_destination_path(destination) %></td>
-          <td><%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><a class="badge badge-success" <%= link_to 'Show', destination %></td>
+          <td><a class="badge badge-warning" <%= link_to 'Edit', edit_destination_path(destination) %></td>
+          <td><a class="badge badge-danger" <%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
