--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -15,7 +15,7 @@
   <%= @destination.country %>
 </p>
 
-<div><img src='<%= @destination.picture %>'></div>
+<div><img src='<%= @destination.picture %>'class="img-fluid. max-width: 100%" height: auto; alt="Responsive image"></div>
 
 <%= link_to 'Edit', edit_destination_path(@destination) %> |
 <%= link_to 'Back', destinations_path %>
