--- a/app/assets/stylesheets/destinations.scss
+++ b/app/assets/stylesheets/destinations.scss
@@ -2,13 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body{
-    text-align: center;
-}
+
 .header {
     text-align: center;
+    margin-top: 5%;
 }
 .destination {
     text-align: center;
 }
+
 
