--- a/app/views/destinations/edit.html.erb
+++ b/app/views/destinations/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Destination</h1>
+<h1 class="header">Editing Destination</h1>
 
-<%= render 'form', destination: @destination %>
+<div class=" form-group container col-2 mt-5">
+    <%= render 'form', destination: @destination %>
+    <%= link_to 'Show', @destination %> |
+    <%= link_to 'Back', destinations_path %>    
+</div>
 
-<%= link_to 'Show', @destination %> |
-<%= link_to 'Back', destinations_path %>
+
+
+
+
+
