--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Destination</h1>
+<h1 class="header">New Destination</h1>
 
-<%= render 'form', destination: @destination %>
-
-<%= link_to 'Back', destinations_path %>
+<div class=" form-group container col-2 mt-5">
+    <%= render 'form', destination: @destination %>
+    <%= link_to 'Back', destinations_path %>
+</div>
