--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand mb-4" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
                 <h6><a class="nav-link mb-6" href="#">Sign-Up</a></h6>
             </li>
             <li class="nav-item">
-                <h6><a class="nav-link mb-6" href="#">Login</a>,</h6>
+                <h6><a class="nav-link mb-6" href="#">Login</a></h6>
             </li>
         </ul>
     </div>
