--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -1,21 +1,58 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<%= stylesheet_link_tag "destinations" %>
+</head>
+<body>
 
-<p>
-  <strong>Title:</strong>
-  <%= @destination.title %>
-</p>
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @destination.description %>
-</p>
+<div><%= image_tag(@destination.picture, id: 'destination-picture') %>
+		<div id= "location-info">
 
-<p>
-  <strong>Country:</strong>
-  <%= @destination.country %>
-</p>
+	<p id= "city">
+	  <!-- <strong>Title:</strong> -->
+	  <%= @destination.title + "," %>
+	</p>
 
-<div><img src='<%= @destination.picture %>'></div>
+	<p id="country">
+	  <!-- <strong>Country:</strong> -->
+	  <%= @destination.country %>
+	</p>
 
-<%= link_to 'Edit', edit_destination_path(@destination) %> |
-<%= link_to 'Back', destinations_path %>
+	<p id="description">
+	  <!-- <strong>Description:</strong> -->
+	  <%= @destination.description %>
+	</p>
+
+		</div>
+
+</div>
+
+<div id="first-group">
+<div id="searchresult-1">
+	<div id="photog-name1"><h4>Name</h4></div>
+</div>
+
+<div id="searchresult-2">
+	<div id="photog-name2"><h4>Name</h4></div>
+</div>
+
+</div>
+
+<div id="second-group">
+<div id="searchresult-3">
+	<div id="photog-name3"><h4>Name</div>
+</div>
+
+<div id="searchresult-4">
+	<div id="photog-name4"><h4>Name</h4></div>
+</div>
+
+</div>
+
+<div id = "edit-and-back"><h4><%= link_to 'Edit', edit_destination_path(@destination) %> |
+<%= link_to 'Back', destinations_path %></h4></div>
+</body>
+</html>
