--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
   </button>
     <div class="collapse navbar-collapse justify-content-end">
         <form class="form-inline mt-4">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search_location">
             <button class="btn btn-success my-4 my-sm-0" type="submit">Search</button>
         </form>
     </div>
