--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,12 +14,21 @@
             <li class="nav-item active">
                 <h6><a class="nav-link mb-6" href="#">Home <span class="sr-only">(current)</span></a></h6>
             </li>
+            <% if user_signed_in? %>
             <li class="nav-item">
-                <h6><a class="nav-link mb-6" href="#">Sign-Up</a></h6>
+                <h6><a class="nav-link mb-6" href="/freelancers/<%= current_user.freelancer.id %>">Profile</a></h6>
             </li>
             <li class="nav-item">
-                <h6><a class="nav-link mb-6" href="#">Login</a></h6>
+                <h6><%= link_to 'Log out', destroy_user_session_path, method: :delete, class: "nav-link mb-6" %></h6>
             </li>
+            <% else %>
+            <li class="nav-item">
+                <h6><a class="nav-link mb-6" href="/users/sign_up">Sign-Up</a></h6>
+            </li>
+            <li class="nav-item">
+                <h6><a class="nav-link mb-6" href="/users/sign_in">Login</a></h6>
+            </li>
+            <% end %>
         </ul>
     </div>
 </nav>
