--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar fixed-bottom card text-center">
+<div class="navbar card text-center">
   <div class="card-header">
     Featured
   </div>
