--- a/app/assets/stylesheets/freelancers.scss
+++ b/app/assets/stylesheets/freelancers.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Freelancers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.header {
+    text-align: center;
+    margin-top: 5%;
+}
+.freelancer {
+    text-align: center;
+}
+
+#freelance {
+    width: 50%;
+}
