--- a/app/views/freelancers/index.html.erb
+++ b/app/views/freelancers/index.html.erb
@@ -1,39 +1,82 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Freelancers</h1>
+<h1 class="header">Freelancers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Bio</th>
-      <th>Userpic</th>
-      <th>Picture</th>
-      <th>User</th>
-      <th>Location</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @freelancers.each do |freelancer| %>
+<div class="container-fluid justify-content-start mt-5">
+  <table class="table table-striped container">
+    <thead class="thead-dark" id="freelance">
       <tr>
-        <td><%= freelancer.first_name %></td>
-        <td><%= freelancer.last_name %></td>
-        <td><%= freelancer.bio %></td>
-        <td><%= freelancer.userpic %></td>
-        <td><%= freelancer.picture %></td>
-        <td><%= freelancer.user_id %></td>
-        <td><%= freelancer.location %></td>
-        <td><%= link_to 'Show', freelancer %></td>
-        <td><%= link_to 'Edit', edit_freelancer_path(freelancer) %></td>
-        <td><%= link_to 'Destroy', freelancer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Bio</th>
+        <th>Userpic</th>
+        <th>Picture</th>
+        <th>User</th>
+        <th>Location</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @freelancers.each do |freelancer| %>
+        <tr>
+          <th><%= freelancer.first_name %></th>
+          <th><%= freelancer.last_name %></th>
+          <th><%= freelancer.bio %></th>
+          <th><%= freelancer.userpic %></th>
+          <th><%= freelancer.picture %></th>
+          <th><%= freelancer.user_id %></th>
+          <th><%= freelancer.location %></th>
+          <th><a class="badge badge-success" <%= link_to 'Show', freelancer %></th>
+          <th><a class="badge badge-warning" <%= link_to 'Edit', edit_freelancer_path(freelancer) %></th>
+          <th><a class="badge badge-danger"<%= link_to 'Destroy', freelancer, method: :delete, data: { confirm: 'Are you sure?' } %></th>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<br>
+
+<div class="freelancer"><button type="button" class="btn btn-success"><%= link_to 'New Freelancer', new_freelancer_path %></button></div>
+
+<% @freelancers.each do |freelancer| %>
+  <div class="row">
+      <div class="col-md-3"><%= freelancer.first_name %></div>
+      <div class="col-md-3"><%= freelancer.last_name %></div>
+      <div class="col-md-3"><%= freelancer.bio %></div>
+      <div class="col-md-3"><%= freelancer.userpic %></div>
+      <div class="col-md-3"><%= freelancer.picture %></div>
+      <div class="col-md-3"><%= freelancer.user_id %></div>
+      <div class="col-md-3"><%= freelancer.location %></div>
+      <div class="col-md-3"><a class="badge badge-success" <%= link_to 'Show', freelancer %></div>
+      <div class="col-md-3"><a class="badge badge-warning" <%= link_to 'Edit', edit_freelancer_path(freelancer) %></div>
+      <div class="col-md-3"><a class="badge badge-danger" <%= link_to 'Destroy', freelancer, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+  </div>
+<% end %>
 
 <br>
 
-<%= link_to 'New Freelancer', new_freelancer_path %>
+<div class="freelancer"><button type="button" class="btn btn-success"><%= link_to 'New Freelancer', new_freelancer_path %></button></div>
+
+<div class="container">
+  <div class="row">
+      <% @freelancers.each do |freelancer| %>
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" <%= freelancer.picture %> alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"><%= freelancer.first_name %> <%= freelancer.last_name %></h5>
+          <p class="card-text"><%= freelancer.bio %></p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><%= freelancer.location %></li>
+          <li class="list-group-item"><%= freelancer.userpic %></li>
+        </ul>
+        <div class="card-body">
+          <a class="card-link"><%= link_to 'Show', freelancer %></a>
+          <a class="card-link"><%= link_to 'Edit', edit_freelancer_path(freelancer) %>
+          <a class="card-link"><%= link_to 'Destroy', freelancer, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
