--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -5,45 +5,18 @@
 <h1 class="header">Destinations</h1>
 
 <div class="container justify-content-center mt-5">
-  <table class="table table-striped container justify-content-center">
-    <thead class="thead-dark">
-      <tr>
-        <th>City</th>
-        <th>Description</th>
-        <th>Country</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @destinations.each do |destination| %>
-        <tr>
-          <th><%= destination.title %></th>
-          <th><%= destination.description %></th>
-          <th><%= destination.country %></th>
-          <td><a class="badge badge-success" <%= link_to 'Show', destination %></td>
-          <td><a class="badge badge-warning" <%= link_to 'Edit', edit_destination_path(destination) %></td>
-          <td><a class="badge badge-danger" <%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-<br>
-<div class="destination"><button type="button" class="btn btn-success"><%= link_to 'New Destination', new_destination_path %></button></div>
-
-<% @destinations.each_slice(3).each do |group| %>
-  <% group.each do |destination| %>
-    <div class="card col-3 text-center">
-      <h5 class="card-header"><%= destination.title %></h5>
-      <div class="card-body">
-        <h5 class="card-title"><%= destination.description %></h5>
-        <p class="card-text"><%= destination.country %></p>
-        <button class="btn btn-primary btn-sm"><%= link_to 'Show', destination %></button>
-        <button class="btn btn-warning btn-sm"><%= link_to 'Edit', edit_destination_path(destination) %></button>
-        <button class="btn btn-danger btn-sm"><%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+  <div class="row col-8-sm">
+    <% @destinations.each do |destination| %>
+      <div class="card" style="width: 32rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"><%= destination.title %></h5>
+          <p class="card-text"><%= destination.description %></p>
+          <aclass="btn btn-primary"><%= link_to 'Show', destination %></a>
+        </div>
       </div>
-      <div class="destination"><button type="button" class="btn btn-success btn-sm"><%= link_to 'New Destination', new_destination_path %></button></div>
-    </div>
-  <% end %>
-<% end %>
+    <% end %>
+  </div>
+</div>
+
+<%= link_to 'New Destination', new_destination_path %>
