--- a/app/views/freelancers/index.html.erb
+++ b/app/views/freelancers/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1 class="header">Freelancers</h1>
 
-<div class="container justify-content-center mt-5">
+<div class="container justify-content-center mt-5" id="freelance-cards">
   <div class="row col-12-sm text-center">
     <% @freelancers.each do |freelancer| %>
       <div class="card" style="width: 35rem;">
