--- a/app/views/freelancers/index.html.erb
+++ b/app/views/freelancers/index.html.erb
@@ -1,7 +1,22 @@
 <p id="notice"><%= notice %></p>
+<h1 class="header">Find a photographer in your dream destination</h1>
+<div class="container justify-content-center mt-5">
+  <div class="row col-12-sm text-center">
+    <% @popular_places.keys.each do |destination| %>
+      <div class="card" style="width: 35rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title card-dark"><%= destination %></h5>
+          <aclass="btn btn-primary"></a>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
-<h1 class="header">Freelancers</h1>
 
+
+<!-- previous code
 <div class="container justify-content-center mt-5" id="freelance-cards">
   <div class="row col-12-sm text-center">
     <% @freelancers.each do |freelancer| %>
@@ -25,4 +40,4 @@
   </div>
 </div>
 
-<div class="freelancer"><button type="button" class="btn btn-success"><%= link_to 'New Freelancer', new_freelancer_path %></button></div>
+<div class="freelancer"><button type="button" class="btn btn-success"><%= link_to 'New Freelancer', new_freelancer_path %></button></div> -->
