--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
-
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
-
-<p>Click the link below to unlock your account:</p>
-
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<h1 class="header">Unlock Password Instructions</h1>
+<div class="form-group container col-2 mt-5">
+    <p>Hello <%= @resource.email %>!</p>
+    <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+    <p>Click the link below to unlock your account:</p>
+    <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+</div>
