--- a/app/views/freelancers/edit.html.erb
+++ b/app/views/freelancers/edit.html.erb
@@ -1,3 +1,6 @@
+<div>
+  <p class="alert alert-success" id="notice" role="alert"><%= notice %></p>
+</div>
 <h1 class="header">Editing Freelancer</h1>
 <div class="form-group container col-2 mt-5">
     <div class="row col-12-sm justify-content-center">
