--- a/app/views/freelancers/index.html.erb
+++ b/app/views/freelancers/index.html.erb
@@ -1,7 +1,7 @@
-<p id="notice"><%= notice %></p>
-
+<div>
+  <p class="alert alert-success" id="notice" role="alert"><%= notice %></p>
+</div>
 <h1 class="header">Freelancers</h1>
-
 <div class="container justify-content-center mt-5" id="freelance-cards">
   <div class="row col-12-sm text-center">
     <% @freelancers.each do |freelancer| %>
