--- a/app/views/freelancers/new.html.erb
+++ b/app/views/freelancers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Freelancer</h1>
-
-<%= render 'form', freelancer: @freelancer %>
-
-<%= link_to 'Back', freelancers_path %>
+<h1 class="header">New Freelancer</h1>
+<div class="form-group container col-2 mt-5">
+    <div class="row col-12-sm justify-content-center">
+        <%= render 'form', freelancer: @freelancer %>
+        <%= link_to 'Back', freelancers_path %>
+    </div>
+</div>
