Added freelancer's profile page (show.html.erb)

--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -13,7 +13,7 @@
 	  <%= @destination.country %>
 	</p>
 
-<div><img src='<%= @destination.picture %>'class="img-fluid. max-width: 100%" height: auto; alt="Responsive image"></div>
+<div><img src='<%= @destination.picture %>'class="img-fluid. max-width: 100%" height: 500px; alt="Responsive image"></div>
 
 
 	<p id="description">
