added logic to show certain location

--- a/app/views/freelancers/index.html.erb
+++ b/app/views/freelancers/index.html.erb
@@ -7,7 +7,7 @@
         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title card-dark"><%= destination %></h5>
-          <aclass="btn btn-primary"></a>
+          <a class="btn btn-primary" href="./locations/<%= destination %>"></a>
         </div>
       </div>
     <% end %>
