--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,17 +4,10 @@
     <span class="navbar-toggler-icon"></span>
   </button>
     <div class="collapse navbar-collapse justify-content-end">
-    <!--
-        <form class="form-inline mt-4">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search_location">
-            <button class="btn btn-success my-4 my-sm-0" type="submit">Search</button>
-        </form> -->
         <%= form_tag(freelancers_path, :method => "get", class: 'form-inline mt-4') do %>
-            <%= text_field_tag :search, params[:search], placeholder: "Search Locations" %>
-            <%= submit_tag "Search", :name => nil %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search Locations", class: 'form-control mr-sm-2', id: 'search_location' %>
+            <%= submit_tag "Search", :name => nil, class: 'btn btn-success my-4 my-sm-0' %>
         <% end %>
-
-
     </div>
     <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
