--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.header {
+    text-align: center;
+    margin-top: 3%;
+}
+.freelancer {
+    text-align: center;
+}
+
+#freelance {
+    width: 50%;
+}
+
+#freelance-cards {
+    padding-left: 20px;
+}
