--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <h6><a class="nav-link mb-6" href="#">Home <span class="sr-only">(current)</span></a></h6>
+                <h6><a class="nav-link mb-6" href="/">Home <span class="sr-only">(current)</span></a></h6>
             </li>
             <% if user_signed_in? %>
             <li class="nav-item">
