--- a/app/views/destinations/edit.html.erb
+++ b/app/views/destinations/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="header">Editing Destination</h1>
+<h1 class="header">Edit Destination</h1>
 
 <div class="form-group container col-2 mt-5">
     <div>
