--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,8 +3,8 @@
     Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <h5 class="card-title">Travellancer</h5>
+    <p class="card-text">Empowering the gig economy<br>Anywhere.</p>
     <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
   </div>
   <div class="card-footer text-muted">
