--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -7,8 +7,15 @@
           <h4 class="card-text"><%= @destination.description %></h4>
         </div>
         <img class="card-img-top" src="<%= @destination.picture %>" alt="Card image cap">
-      </div>
+      </div> 
   </div>
 </div>
-<%= link_to 'Edit', edit_destination_path(@destination) %> |
-<%= link_to 'Back', destination_path %>
+
+<div class="container mt-3">
+	<div class="row col-12-sm justify-content-center">
+		<h5><%= link_to 'Edit', edit_destination_path(@destination) %></h5>|
+		<h5><%= link_to 'Back', destination_path(@destination) %></h5>
+	</div>
+</div>
+
+ 
