--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,8 +9,8 @@
       <div class="card" style="width: 35rem;">
         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title card-dark"><%= destination %></h5>
-          <a class="btn btn-primary" href="./locations/<%= destination %>"></a>
+          
+          <a class="badge badge-info badge-sm" href="./locations/<%= destination %>"><h6 class="card-title card-dark"><%= destination %></h6></a>
         </div>
       </div>
     <% end %>
