--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
   <div class="card-body">
     <h5 class="card-title">Travellancer</h5>
     <p class="card-text">Empowering the gig economy<br>Anywhere.</p>
-    <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+    <a href="/users/sign_up" class="btn btn-primary btn-sm">Go somewhere</a>
   </div>
   <div class="card-footer text-muted">
     All rights reserved.
