Removed user_id from freelancer form, added genres.

--- a/app/views/freelancers/_form.html.erb
+++ b/app/views/freelancers/_form.html.erb
@@ -29,6 +29,11 @@
       </div>
 
       <div class="field">
+        <%= form.label :genre %>
+        <%= form.textr_field :genre %>
+      </div>      
+
+      <div class="field">
         <%= form.label :userpic %>
         <%= form.text_field :userpic %>
       </div>
@@ -36,11 +41,6 @@
       <div class="field">
         <%= form.label :picture %>
         <%= form.text_field :picture %>
-      </div>
-
-      <div class="field">
-        <%= form.label :user_id %>
-        <%= form.number_field :user_id %>
       </div>
 
       <div class="field">
