--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -10,7 +10,7 @@
       <div class="card" style="width: 35rem;">
         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title card-dark"><%= freelancer.first_name %></h5>
+          <h5 class="card-title card-dark"><%= freelancer.first_name %> <%= freelancer.last_name %></h5>
           <p class="card-text"></p>
           <aclass="btn btn-primary"></a>
         </div>
