Added Genres to profile page.

--- a/app/views/freelancers/_form.html.erb
+++ b/app/views/freelancers/_form.html.erb
@@ -27,12 +27,7 @@
         <%= form.label :bio %>
         <%= form.text_field :bio %>
       </div>
-
-      <div class="field">
-        <%= form.label :genre %>
-        <%= form.textr_field :genre %>
-      </div>      
-
+     
       <div class="field">
         <%= form.label :userpic %>
         <%= form.text_field :userpic %>
@@ -47,6 +42,11 @@
         <%= form.label :location %>
         <%= form.text_field :location %>
       </div>
+
+      <div class="field">
+        <%= form.label :genre %>
+        <%= form.text_field :genre %>
+      </div>       
 
       <div class="actions">
         <%= form.submit %>
