--- a/app/views/freelancers/show.html.erb
+++ b/app/views/freelancers/show.html.erb
@@ -27,9 +27,15 @@
 
 <div id= "bio">
   <h5 id="aboutme">About Me:</h5>
-
   <h6>
     <%= @freelancer.bio %>
+  </h6>
+</div>
+
+<div>
+  <h5>Genre:</h5>
+  <h6>
+    <%= @freelancer.genre %>
   </h6>
 </div>
 
