implemented search functionality to account for travelling destinations and dates

--- a/app/views/freelancers/index.html.erb
+++ b/app/views/freelancers/index.html.erb
@@ -1,6 +1,6 @@
 
 <div>
-  <p class="alert alert-success" id="notice" role="alert"><%= notice %></p>
+  <p class="alert alert-success" id="notice" role="alert"><%= @message %></p>
 </div>
 <h1 class="header">Freelancers</h1>
 
