--- a/app/views/freelancers/show.html.erb
+++ b/app/views/freelancers/show.html.erb
@@ -33,10 +33,7 @@
 </div>
 
 <div>
-  <h5>Genre:</h5>
-  <h6>
-    <%= @freelancer.genre %>
-  </h6>
+  <h5>Genre:<hr><%= @freelancer.genre %></h5>
 </div>
 
 <div id="location">
