--- a/app/views/freelancers/_form.html.erb
+++ b/app/views/freelancers/_form.html.erb
@@ -30,7 +30,7 @@
 
       <div class="field">
         <%= form.label :genre %>
-        <%= form.textr_field :genre %>
+        <%= form.text_field :genre %>
       </div>      
 
       <div class="field">
