--- a/app/views/freelancers/_form.html.erb
+++ b/app/views/freelancers/_form.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-  <div class="row col-12">
+<h1 class="header row col-12-sm justify-content-center mt-2">Editing Freelancer</h1>
+<div class="container mt-2">
+  <div class="row col-12 mt-2">
     <%= form_with(model: freelancer, local: true) do |form| %>
       <% if freelancer.errors.any? %>
         <div id="error_explanation">
@@ -11,7 +12,7 @@
           <% end %>
           </ul>
         </div>
-      <% end %>
+    <% end %>
 
       <div class="field">
         <%= form.label :first_name %>
@@ -45,7 +46,7 @@
 
       <div class="field">
         <%= form.label :genre %><br>
-        <%= form.text_area :genre %><br>      
+        <%= form.text_area :genre %><br>
         <%= form.label :genre %><br>
         <%= check_box_tag(:genre) %>
         <%= label_tag(:genre, "Weddings") %>
@@ -67,4 +68,5 @@
     <% end %>
   </div>
 </div>
+
 
