--- a/app/assets/stylesheets/freelancers.css
+++ b/app/assets/stylesheets/freelancers.css
@@ -3,13 +3,13 @@
 }
 
 #freelance-photog {
-	height: 250px;
-	width: 800px;
+	height: 500px;
+	width: 1500px;
 }
 
 #photog-image {
-	height: 100%;
-	max-width: auto;
+	height: 75vh;
+	width: 1500px;
 }
 
 #userpic {
@@ -20,21 +20,21 @@
 #freelancer-avatar {
 	position: relative;
 	bottom: 75px;
-	left: 45px;
+	left: 26%;
 }
 
 #freelancer-name {
 	display: inline-flex;
 	position: relative;
-	top: -160px;
-	left: 26%;
+	margin-top: 11%;
+	left: -7%;
 	color: black;
 }
 
 #location {
 	display: inline-flex;
 	position: relative;
-	top: -250.9px;
+	margin-top: -42%;
 	left: 59%;
 	color: black;
 }
@@ -43,16 +43,13 @@
 	font-size: 20px;
 }
 
-#aboutme {
-	position: relative;
-	left: 21px;
-}
 
 #bio {
 	display: block;
 	position: relative;
-	margin-left: 44%;
-	bottom: 90px;
+	margin-left: 25%;
+	margin-bottom: 10%;
+
 }
 
 #edit {
@@ -75,4 +72,4 @@ h5 {
 
 h6 {
 
-}
+}  
