--- a/app/views/freelancers/show.html.erb
+++ b/app/views/freelancers/show.html.erb
@@ -1,56 +1,53 @@
+<div class="container">
+  <div class="row col-12">
+    <div class="" id="freelancer-photog">
+    <!-- <strong>Picture:</strong> -->
+      <img src= '<%= @freelancer.picture %>' class="img-fluid" id="photog-image"></img>
+    </div>
 
-  <p id="notice"><%= notice %></p>
+    <div id="container">
+      <div id="freelancer-avatar">
+        <!-- <strong>Userpic:</strong> -->
+        <img src= '<%= @freelancer.userpic %>'id="userpic"></img>
+      </div>
+    </div>
 
-  <div class="row col-12-s" id="freelancer-photog">
-  <!-- <strong>Picture:</strong> -->
-  <img src= '<%= @freelancer.picture %>' class="img-fluid" id="photog-image"></img> 
-</div>
+    <div id="freelancer-name">
+      <h3>
+      <!--  <strong>First name:</strong> -->
+        <%= @freelancer.first_name %> <%= @freelancer.last_name %><br>
+      </h3>
+    </div>
 
-<div id="container">
-  <div id="freelancer-avatar">
-    <!-- <strong>Userpic:</strong> -->
-    <img src= '<%= @freelancer.userpic %>'id="userpic"></img>
+    <div id= "bio">
+      <h5>About Me:<br><%= @freelancer.bio %></h5>
+    </div>
+
+    <div>
+      <h5>Genre:<br><%= @freelancer.genre %></h5>
+    </div>
+
+    <div id="location">
+        <!-- <strong>Location:</strong> -->
+      <h6 id="location-font">
+        Location: <%= @freelancer.location %>
+      </h6>
+    </div>
   </div>
 </div>
-
-<div id="freelancer-name">
-  <h3>
-   <!--  <strong>First name:</strong> -->
-    <%= @freelancer.first_name %>
-  </h3>
-
-  <h3>
-    <!-- <strong>Last name:</strong> -->
-    <%= @freelancer.last_name %>
-  </h3>
-</div>
-
-<div id= "bio">
-  <h5 id="aboutme">About Me:</h5>
-  <h6>
-    <%= @freelancer.bio %>
-  </h6>
-</div>
-
-<div>
-  <h5>Genre:<hr><%= @freelancer.genre %></h5>
-</div>
-
-<div id="location">
-    <!-- <strong>Location:</strong> -->
-    <p id="location-font">
-    <%= @freelancer.location %>
-  </p>
-</div>
-
-<div id="edit"><p id="edit-text"><%= link_to 'Edit', edit_freelancer_path(@freelancer) %></p></div>
 
 <!--   | <%= link_to 'Back', freelancers_path %> -->
 
 <!-- Button trigger modal -->
+<div class="container">
+<div class="row justify-content-between">
 <button type="button" class="btn btn-success" data-toggle="modal" data-target="#travelModal">
   Set Travel Options
 </button>
+<button type="button" class="btn btn-success col-1 justify-content-end"> <%= link_to 'Edit', edit_freelancer_path(@freelancer) %></button>
+</div>
+</div>
+
 
 <!-- Modal -->
 <div class="modal fade" id="travelModal" tabindex="-1" role="dialog" aria-labelledby="travelModalLabel" aria-hidden="true">
@@ -92,3 +89,4 @@
     </div>
   </div>
 </div>
+
