--- a/app/views/freelancers/show.html.erb
+++ b/app/views/freelancers/show.html.erb
@@ -1,37 +1,35 @@
 <div class="container">
-  <div class="row col-12">
+  <div class="row col-s-12">
     <div class="" id="freelancer-photog">
     <!-- <strong>Picture:</strong> -->
       <img src= '<%= @freelancer.picture %>' class="img-fluid" id="photog-image"></img>
     </div>
-
     <div id="container">
-      <div id="freelancer-avatar">
+      <div class="row col-s-12" id="freelancer-avatar">
         <!-- <strong>Userpic:</strong> -->
         <img src= '<%= @freelancer.userpic %>'id="userpic"></img>
       </div>
     </div>
-
-    <div id="freelancer-name">
-      <h3>
-      <!--  <strong>First name:</strong> -->
-        <%= @freelancer.first_name %> <%= @freelancer.last_name %><br>
-      </h3>
+  </div>
+  <div class="container mb-3" id="jumbo">
+    <div class="row col-s-12">
+      <div class="jumbotron jumbotron-fluid jumbotron-success">
+        <h2 class="display-3 text-center"><%= @freelancer.first_name %> <%= @freelancer.last_name %></h2>
+        <h1 class="">About Me:</h1>
+        <hr class="my-2">
+        <h5><%= @freelancer.bio %></h5>
+        <h1 class="mt-4 text-center">Location: <%= @freelancer.location %></h1>
+      </div>
     </div>
-
-    <div id= "bio">
-      <h5>About Me:<br><%= @freelancer.bio %></h5>
-    </div>
-
-    <div>
-      <h5>Genre:<br><%= @freelancer.genre %></h5>
-    </div>
-
-    <div id="location">
-        <!-- <strong>Location:</strong> -->
-      <h6 id="location-font">
-        Location: <%= @freelancer.location %>
-      </h6>
+  </div>
+  <div class="container container" id="dumbo">
+    <div class="row col-s-12">
+      <div class="jumbotron jumbotron-fluid w-100">
+        <h4 class="display-4 text-center">Photography</h4>
+        <h3 class="title text-center">Genres:</h4>
+        <hr class="my-2">
+        <h4 class="text-center"><%= @freelancer.genre %></h1>
+      </div>
     </div>
   </div>
 </div>
