--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
   <p class="alert alert-success" id="notice" role="alert"><%= notice %></p>
 </div>
 
-<h1 class="header">Find a photographer in your dream destination</h1>
+<h1 class="header mt-5">Find a photographer in your dream destination</h1>
 <div class="container justify-content-center mt-5">
   <div class="row col-12-sm text-center">
     <% @popular_places.keys.each do |destination| %>
