Reformatted top margins for devise log-in pages after header was updated.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
-<div>
-  <p class="alert alert-success" id="notice" role="alert"><%= notice %></p>
-</div>
+<h1 class="header row col-12-sm justify-content-center mt-5"></h1>
+<h1 class="header row col-12-sm justify-content-center mt-5"></h1>
+<h1 class="header row col-12-sm justify-content-center mt-5"></h1>
 
 <h1 class="header">Find a photographer in your dream destination</h1>
 <div class="container justify-content-center mt-5">
