--- a/app/views/freelancers/show.html.erb
+++ b/app/views/freelancers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container col-s-12 mt-5">
   <div class="row col-s-12">
     <div class="" id="freelancer-photog">
     <!-- <strong>Picture:</strong> -->
