fixing heroku routes and hopefully images

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,9 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="navtop">
   <div id="logo-name"
       <a class="navbar-brand mb-4" href="#"><img src="/assets/logo.png" id="logo"></img></a>
-      <img src = "/assets/companyname.png" id="companyname"></img>
+      
  </div>
-
-  <div id="motto"><p>Empowering The Gig Economy, Anywhere</p></div>
+  <img src = "/assets/companymotto.png" id="companyname"></img>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
