removed destinations folder, moved container dowh because of the header

--- a/app/views/freelancers/index.html.erb
+++ b/app/views/freelancers/index.html.erb
@@ -1,7 +1,4 @@
-
-
-
-<div class="container justify-content-center mt-5" id="freelance-cards">
+<div class="container justify-content-center" id="freelance-cards">
 <div class="row col-12-sm text-center justify-content-center" style="">
 <h1 class="header">Photographers in <%= params[:search] %></h1>
 </div>
