--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="container justify-content-center mt-5">
+<div class="container justify-content-center">
     <h1 class="header">Find a photographer in your dream destination</h1>
   <div class="row col-12-sm text-center justify-content-center card-deck" style="margin-bottom: 5rem;">
     <% @popular_places.keys.each do |destination| %>
