--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,19 +1,20 @@
-<div>
-  <p class="alert alert-success" id="notice" role="alert"><%= notice %></p>
-</div>
-
+<div class="container justify-content-center">
 <h1 class="header">Photographers in <%= params[:location] %></h1>
 
-<div class="container justify-content-center mt-5">
-  <div class="row col-12-sm text-center">
+<div class="row col-12-sm text-center justify-content-center card-deck" style="margin-bottom: 5rem;">
     <% @freelancers_from_location.each do |freelancer| %>
-      <div class="card" style="width: 35rem;">
-        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title card-dark"><%= freelancer.first_name %> <%= freelancer.last_name %></h5>
-          <p class="card-text"></p>
-          <aclass="btn btn-primary"></a>
+      <div class="card">
+        <img class="card-img-top" src="<%= freelancer.picture %>" alt="Card image cap">
+        <div class="avatar">
+          <img alt="" src="<%= freelancer.userpic %>">
         </div>
+        <div class="card-body">
+          <h5 class="card-title card-dark"><%= link_to freelancer.first_name, freelancer %></h5>
+          <p class="card-text"><%= freelancer.bio %></p>
+        </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item"><%= freelancer.location %></li>
+        </ul>
       </div>
     <% end %>
   </div>
