made the random picture on the front page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row col-12-sm text-center justify-content-center card-deck" style="margin-bottom: 5rem;">
     <% @popular_places.keys.each do |destination| %>
       <div class="card" style="width: 21rem;">
-        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <img class="card-img-top" src="<%= Freelancer.where("location = '#{destination}'").first.picture %>" alt="Card image cap">
         <div class="card-body">
           
           <a class="badge badge-info badge-sm" href="./locations/<%= destination %>"><h6 class="card-title card-dark"><%= destination %></h6></a>
