playing with cards

--- a/app/views/freelancers/show.html.erb
+++ b/app/views/freelancers/show.html.erb
@@ -39,10 +39,10 @@
 <!-- Button trigger modal -->
 <div class="container">
 <div class="row justify-content-between">
-<button type="button" class="btn btn-success" data-toggle="modal" data-target="#travelModal">
+<button type="button" class="btn btn-success col-3 justify-content-start" data-toggle="modal" data-target="#travelModal">
   Set Travel Options
 </button>
-<button type="button" class="btn btn-success col-1 justify-content-end"> <%= link_to 'Edit', edit_freelancer_path(@freelancer) %></button>
+<button type="button" class="btn btn-success col-3 justify-content-end"> <%= link_to 'Edit', edit_freelancer_path(@freelancer) %></button>
 </div>
 </div>
 
